Modifications to the text and adding some classes.

--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
 <body>
     <!-- Add your site or application content here -->
 
-    <header>
+    <header class="site-header">
         <h1>Crowds of New York</h1>
     </header>
 
     <main role="main">
-        <p class="introduction">New York has hosted crowds for many occasions over the years. Below are a few, from the historic to the everyday.</p>
+        <p class="introduction">New York has hosted crowds for many occasions over the years. Below are a few, from the historic, to the political, to the everyday.</p>
 
-        article.crowd>p.crowd__image>img^+p.crowd__type+h3.crowd__title+p.crowd__meta+p.crowd__text
+        <!-- article.crowd>p.crowd__image>img^+p.crowd__type+h3.crowd__title+p.crowd__meta+p.crowd__text -->
 
         <section class="crowds">
             <article class="crowd">
                 <p class="crowd__image"><img src="images/selma.jpg" alt="Marchers carrying banner reading We march with Selma"></p>
                 <p class="crowd__type">Marchers</p>
-                <h3 class="crowd__title">Marchers carrying banner lead way as 15,000 parade in Harlem</h3>
-                <p class="crowd__meta">Date: 1965, by Stanley Wolfson for World TElegram &amp; Sun</p>
+                <h3 class="crowd__title">Civil Rights Marchers in Harlem</h3>
+                <p class="crowd__meta">Date: 1965</p>
                 <p class="crowd__text">
-                    Photograph shows marchers carrying banner "We march with Selma!" on street in Harlem, New York City, New York. <a href="https://www.loc.gov/item/2005677031/">view at LOC</a>
+                    A crowd of 15,000 marchers carrying a banner reading "We march with Selma!" gather on a street in Harlem to show solidarity with marchers in Selma. <span class="outside-link"><a href="https://www.loc.gov/item/2005677031/">view at Library of Congress</a></span>
                 </p>
             </article>
             <article class="crowd">
@@ -42,7 +42,7 @@
                 <h3 class="crowd__title">Suffragists marching</h3>
                 <p class="crowd__meta">Date: probably 1913</p>
                 <p class="crowd__text">
-                    Women did not get the right to vote until 1920 in the US. The Suffragist movement was key in winning that right. <a href="https://www.loc.gov/item/97500064/">view at LOC</a>
+                    Women did not get the right to vote until 1920 in the US. The Suffragist movement was key in winning that right. <span class="outside-link"><a href="https://www.loc.gov/item/97500064/">view at Library of Congress</a></span>
                 </p>
             </article>
             <article class="crowd">
@@ -51,7 +51,7 @@
                 <h3 class="crowd__title">Easter crowds on Fifth Avenue</h3>
                 <p class="crowd__meta">Date: 1904</p>
                 <p class="crowd__text">During the holidays New York has always been crowded.
-                    <a href="https://www.loc.gov/item/2016803615/">view at LOC</a>
+                    <span class="outside-link"><a href="https://www.loc.gov/item/2016803615/">view at Library of Congress</a></span>
                 </p>
             </article>
             <article class="crowd">
@@ -60,7 +60,7 @@
                 <h3 class="crowd__title">A crowd on D-day in Madison Square Park</h3>
                 <p class="crowd__meta">Date: 1944</p>
                 <p class="crowd__text">D-day was the day that Allied forces entered France at the beaches of Normandy in World War II. The people in the crowd here in New York City are showing their support.
-                    <a href="https://www.loc.gov/item/2017866759/">view at LOC</a>
+                    <span class="outside-link"><a href="https://www.loc.gov/item/2017866759/">view at Library of Congress</a></span>
                 </p>
             </article>
             <article class="crowd">
@@ -69,23 +69,43 @@
                 <h3 class="crowd__title">World Series Crowd</h3>
                 <p class="crowd__meta">Date: 1922</p>
                 <p class="crowd__text">People in the stadium for the first game of the World Series in the Polo Grounds. The Polo Grounds is where the New York Yankees used to play baseball.
-                    <a href="https://www.loc.gov/item/89714123/">view at LOC</a>
+                    <span class="outside-link"><a href="https://www.loc.gov/item/89714123/">view at Library of Congress</a></span>
                 </p>
             </article>
             <article class="crowd">
-                <p class="crowd__image"><img src="images/stockexchange.jpg" alt="workers surrounded by terminals displaying stock price information on the stock exchange floor."></p>
+                <p class="crowd__image"><img src="images/stockexchange-crop.jpeg" alt="workers surrounded by terminals displaying stock price information on the stock exchange floor."></p>
                 <p class="crowd__type">Business</p>
                 <h3 class="crowd__title">Trading Floor Workers</h3>
                 <p class="crowd__meta">Date: 1980</p>
                 <p class="crowd__text">People working on the trading floor of the New York Stock Exchange.
-                    <a href="https://www.loc.gov/item/2011632435/">view at LOC</a>
+                    <span class="outside-link"><a href="https://www.loc.gov/item/2011632435/">view at Library of Congress</a></span>
+                </p>
+            </article>
+            <article class="crowd">
+                <p class="crowd__image"><img src="images/actors.jpg" alt="A crowd of people, mostly men with hats, gather on the street."></p>
+                <p class="crowd__type">Rally</p>
+                <h3 class="crowd__title">Actors on Strike on 45th Street</h3>
+                <p class="crowd__meta">Date: 1919</p>
+                <p class="crowd__text">New York has long been a hub for media and entertainment. Also for unscrupulous producers. This is most likely a strike by the Actor&rsquo;s Equity Association, an actor's union.
+                <span class="outside-link"><a href="https://www.loc.gov/item/97519064/">view at Library of Congress</a></span>
+
+                </p>
+            </article>
+            <article class="crowd">
+                <p class="crowd__image"><img src="images/beach.jpg" alt="bathers on the beach and in the water with buildings in background."></p>
+                <p class="crowd__type">Social Gathering</p>
+                <h3 class="crowd__title">Bathers at Manhattan Beach</h3>
+                <p class="crowd__meta">Date: 1902</p>
+                <p class="crowd__text">
+                    It can be easy to forget that most of New York is islands, but when it&rsquo;s hot in the summer the beach is a popular place.
+                    <span class="outside-link"><a href="https://www.loc.gov/item/2007661468/">view at Library of Congress</a></span>
                 </p>
             </article>
         </section>
     </main>
 
-   <footer>
-       <p class="created-by">This site was designed by </p>
+   <footer class="site-footer">
+       <p class="created-by">This site was designed by YourName </p>
        <p>All images are from the US Library of Congress and are in the public domain.</p>
    </footer>
 
